# Sandial

./: .gitignore  README.md  index.html  readme.html  sandial.py
js/: sandial-clock.js
src/src-c/: CMakeLists.txt  README.md  dummyPi.h  heartbeat.h  main.c  pythontest.c
src/src-python/: README.md  sandial.py
