cmake_minimum_required(VERSION 3.3)
project(sandialc)

# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
# set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")
# set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -v -DCMAKE_FIND_FRAMEWORK=LAST -DPYTHON_LIBRARY='/opt/local/Library/Frameworks/Python.framework/Versions/2.7/Python' -DPYTHON_INCLUDE_DIR='/opt/local/Library/Frameworks/Python.framework/Versions/2.7/Headers'")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -v -DPYTHON_LIBRARIES=/opt/local/Library/Frameworks/Python.framework/Versions/2.7/lib/libpython2.7.dylib")
#if (APPLE)
#    message(WARNING "Compiling on an Apple Device. Expect fatal undefined symbols")
#    set(WIRING_PI_ROOT ../../external/wiringPi)
#    set(WIRING_PI_DIRS ${WIRING_PI_ROOT}/gpio ${WIRING_PI_ROOT}/wiringPi)
#    include_directories (${WIRING_PI_DIRS})
#endif (APPLE)
#find_library(Python REQUIRED)
FIND_PACKAGE(PythonLibs REQUIRED)
set(SOURCE_FILES pythontest.c)
add_executable(sandialc ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(sandialc ${PYTHON_LIBRARIES})
